Bug 1100360 - Convert ChromeHang annotations to use UniquePtr. r=vladan, a=sledru